--- a/ShopAcc/src/main/resources/application.properties
+++ b/ShopAcc/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/ShopAcc
+spring.datasource.url=jdbc:mysql://localhost:3306/TestShopAcc01
 spring.datasource.username=root
-spring.datasource.password=khanh
+spring.datasource.password=12345678
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
